Author: Aaron Edwards (incsub)

Change Log: 
----------------------------------------------------------------------
----------------------------------------------------------------------



2.8.9 - 8/22/2013 - Aaron Edwards, Arnold, Marko Miljus
----------------------------------------------------------------------
- Added PIN payment gateway (beta)
- Added Simplify Commerce gateway by MasterCard
- Removed all the old style PHP 4 constructors (Class name functions)
- Add multiple currency support to Payflow Pro gateway
- Remove help screen when WPMUDEV_REMOVE_BRANDING defined
- Fixed order_confirmation_email() declaration to match it's parent.(Warnings)
- In USPS shipping added maximum box weights to flat rate boxes to improve calculating the number of boxes needed.
- Fixed problem where shipping option could be unselected if the suboption disappeared due to changing the address.
- In FedEx, default to residential delivery. Only allow the customer to change residential to commercial if Allow Commercial checked in settings.
- Changed Continue Checkout buttonform disabled to hide during the shipping rate update.
- Add Euro support to Stripe gateway (Ireland)
- Fix admin styles that stopped being included due to a typo

2.8.8 - 7/15/2013 - Aaron Edwards, Arnold, Marko Miljus
----------------------------------------------------------------------
- Add SKU's to admin new order notification email
- Fixed a rounding error with Paypal chained and Tax Inclusive pricing
- Add support for Ireland locale in paypal and not require postal code
- Add support for CAD, EUR and GBP to Authorize.net AIM gateway
- Add support for GBP to Stripe gateway
- Fix store count on global checkout confirmation screen
- Fix coupons datepicker
- Added process_shipping_form call to shipping_sub_options() so that custom fields that can affect shipping will be read. (ie Resedential in FedEx)
- Make custom column code more efficient - props @michael_cannon